fixed dark mode

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -15,7 +15,6 @@ a {
 * {
 	box-sizing: border-box;
 }
-@media (prefers-color-scheme: dark) {
 	html {
 		color-scheme: dark;
 	}
@@ -23,4 +22,4 @@ a {
 		color: white;
 		background: black;
 	}
-}
+
